<?xml version="1.0"?>
<package format="2">

  <name>test_package</name>
  <version>0.1.0</version>
  <description>A test package.</description>
  <maintainer email="myemail@mail.com">my name</maintainer>
  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- depend: build, and execution dependency -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

</package>
